--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="inch">Inch</string>
     <string name="feet">Feet</string>
     <string name="weight_in_pounds">Weight (in pounds)</string>
+    <string name="history">History</string>
 </resources>
