history activity - room

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="feet">Feet</string>
     <string name="weight_in_pounds">Weight (in pounds)</string>
     <string name="history">History</string>
+    <string name="no_data_available">NO DATA AVAILABLE</string>
+    <string name="exercise_completed">EXERCISE COMPLETED</string>
 </resources>
